--- a/src/Shazam.ipynb
+++ b/src/Shazam.ipynb
@@ -133,7 +133,7 @@
     "        self.songs = self.db['songs']\n",
     "        self.song_names = self.db['song_names']\n",
     "    \n",
-    "    def insert_song(self, song_name, songs_hashes):\n",
+    "    def insert_song(self, song_name, song_hashes):\n",
     "        song_id = hashlib.md5( song_name.encode('utf-8') ).hexdigest()\n",
     "        hashes = []\n",
     "        for hash in song_hashes:\n",
@@ -373,7 +373,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
